# pre-commit-terraform-usage

./: .gitignore  .gitlab-ci-template.yml  .gitlab-ci.yml.example  .pre-commit-config.yaml  .pre-commit-hooks.yaml  DEVELOPMENT.md  MANIFEST.in  README.md  action.yml  pyproject.toml  setup.py  setup.sh  terraform_usage_gen.py
.github/workflows/: check-terraform-usage.yml  python-tests.yml  test-action.yml  update-terraform-usage.yml
templates/: README.md  compact.tpl  default.tpl  detailed.tpl  minimal.tpl
terraform_usage/: __init__.py  cli.py  generator.py  git_utils.py  parser.py  readme_updater.py
tests/: test_generator.py  test_git_utils.py  test_parser.py  test_readme_updater.py
