[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "terraform-usage-validator"
version = "1.0.0"
description = "Validate and auto-generate Terraform usage blocks in README.md"
readme = "README.md"
requires-python = ">=3.6"
license = { text = "MIT" }
authors = [{ name = "Your Organization", email = "your-email@example.com" }]
keywords = [
  "terraform",
  "documentation",
  "pre-commit",
  "github-actions",
  "gitlab-ci",
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Software Development :: Documentation",
  "Topic :: Software Development :: Quality Assurance",
]

[project.urls]
Homepage = "https://github.com/hauke-cloud/pre-commit-terraform-usage"
Documentation = "https://github.com/hauke-cloud/pre-commit-terraform-usage#readme"
Repository = "https://github.com/hauke-cloud/pre-commit-terraform-usage"
"Bug Tracker" = "https://github.com/hauke-cloud/pre-commit-terraform-usage/issues"

[project.scripts]
terraform-usage-gen = "terraform_usage_gen:main"

[tool.setuptools]
py-modules = ["terraform_usage_gen"]
